# suanfazhushou

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260609_0001_create_learning_schema.py  20260609_0002_add_ai_prompt_and_log_tables.py  20260610_0003_add_problem_bank_tables.py  20260611_0004_add_problem_display_ids.py  20260612_0005_add_code_reviews_and_mistake_notes.py  20260613_0006_add_test_cases.py  20260619_0007_add_submissions.py  20260624_0008_add_student_profile_fields.py  20260624_0009_add_learning_ladder.py  20260625_0010_add_ladder_practice_items.py  20260626_0011_add_roles_and_public_problems.py  20260627_0012_add_ladder_exam_attempts.py  20260627_0013_add_interactive_lessons.py  20260627_0014_extend_interactive_lessons_sources.py  20260628_0015_add_user_ai_settings.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  code_reviews.py  dashboard.py  health.py  interactive_lessons.py  ladder.py  learning.py  mistakes.py  openmaic.py  problems.py  settings.py  submissions.py  topics.py
backend/app/core/: config.py  deps.py  errors.py  security.py
backend/app/models/: __init__.py  ai_call_log.py  code_review.py  ladder.py  (+11 more)
backend/scripts/: check_openmaic_integration.py  init_dev.py  seed_admin.py  seed_ladder_templates.py  seed_prompt_templates.py  seed_topics.py
backend/tests/: conftest.py  test_ai.py  test_ai_provider.py  test_auth.py  test_code_reviews.py  test_dashboard.py  test_health.py  test_interactive_lessons.py  test_ladder.py  test_ladder_exams.py  test_learning_records.py  test_mistake_notes.py  test_openmaic.py  test_problem_import_zip.py  test_problems.py  test_seed_scripts.py  test_settings.py  test_submission_diagnosis.py  test_submissions.py  test_topics.py
judge/: .dockerignore  Dockerfile  pyproject.toml
judge/app/: __init__.py  config.py  docker_runner.py  limiter.py  main.py  schemas.py
judge/runner/: Dockerfile  __init__.py  controller.py
judge/tests/: test_docker_integration.py  test_docker_runner.py  test_limiter.py  test_runner_controller.py
(+167 files in other folders)
