[project]
name = "algomentor-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for AlgoMentor AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.124.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
