[project]
name = "algomentor-backend"
version = "0.1.0"
description = "FastAPI backend with knowledge map for AlgoMentor AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
