[project]
name = "algomentor-judge"
version = "0.1.0"
description = "Isolated Docker judge service for AlgoMentor AI"
requires-python = ">=3.11,<3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.124.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
